@@ -254,32 +254,7 @@ Test::Differences = 0
 Test::TempDir::Tiny = 0
 
 [DynamicPrereqs]
--delimiter = |
--raw = |unless ( eval { ExtUtils::MakeMaker->VERSION(6.53_03) } ) {
--raw = |  *MM::_installed_file_for_module = sub {
--raw = |    my $class  = shift;
--raw = |    my $prereq = shift;
--raw = |    my $file = "$prereq.pm";
--raw = |    $file =~ s{::}{/}g;
--raw = |    my $path;
--raw = |    for my $dir (@INC) {
--raw = |      my $tmp = File::Spec->catfile($dir, $file);
--raw = |      if ( -r $tmp ) {
--raw = |        $path = $tmp;
--raw = |        last;
--raw = |      }
--raw = |    }
--raw = |    return $path;
--raw = |  }
--raw = |}
--raw = |{
--raw = |  # Avoid issue with sanity bugs and Moose penalties
--raw = |  my $module = "Dist::Zilla::App::Command::chainsmoke";
--raw = |  if ( my $path = MM->_installed_file_for_module($module) ) {
--raw = |    my $version = MM->parse_version($path) || q[0];
--raw = |    require version;
--raw = |    if ( version->parse($version) < '1.15' ) {
--raw = |      $FallbackPrereqs{$module} = $WriteMakefileArgs{PREREQ_PM}->{$module} = '1.15';
--raw = |    }
--raw = |  }
--raw = |}
+:version = 0.016
+-raw = # Avoid issue with sanity bugs and Moose penalties
+-raw = my $module = "Dist::Zilla::App::Command::chainsmoke";
+-raw = requires($module, '1.15') if has_module($module);
